--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
+.layout {
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  min-height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form_wrapper{
+  background-color: #f6f4ebd2;
+  border-radius: 30px;
+  display: flex;
+  flex-direction:column;
+  max-width: 400px;
+  min-height: 100%;
+  border: 3px solid #1c521e;
+}
+
+.form_contents {
+  padding: 30px;
+}
+
+.form_title {
+  margin-bottom: 25px;
   text-align: center;
+  font-size: 20px;
+  font-weight: 550;
+  color: #650124a2;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.email_wrapper,
+.pass_wrapper {
+  margin-bottom: 20px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content:space-between
+}
+
+.button_wrapper {
+  margin-top: 30px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.button_submit {
+  border-radius: 8px;
+  border: 2px solid #1c521e;
+  color: #211d1dd0;
+  font-size: 1em;
+  font-weight: 600;
+  font-family: inherit;
+  background-color:#b72a3f62;
+  min-width: 98px;
+  min-height: 35px;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+.button_submit:hover {
+  border-color: #650124a2;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.email_form,
+.password_form {
+  border-radius: 8px;
+  border: 2px solid #1c521e;
+  min-height: 35px;
 }
